# FEUP-RI-A1

./: .gitignore  Readme.md  data.txt  odometry.csv  package.xml  ploting.py  setup.cfg  setup.py  testing.py
c_turtle/: c_turtle.py  c_turtlev0.py
c_world/: c.yaml  cturtle.model.yaml  cturtle.modelTricycle.yaml  question.yaml  world.yaml
flatland/: README.md
flatland/flatland_plugins/: CMakeLists.txt
flatland/flatland_plugins/include/flatland_plugins/: diff_drive.h  dynamics_limits.h  laser.h  tricycle_drive.h
flatland/flatland_plugins/src/: diff_drive.cpp  dynamics_limits.cpp  laser.cpp  tricycle_drive.cpp
flatland/flatland_plugins/test/: dynamics_limits_test.cpp
flatland/flatland_rviz_plugins/include/flatland_rviz_plugins/: change_rate_tool.hpp
flatland/flatland_rviz_plugins/src/: change_rate_dialog.hpp  pause_tool.cpp
flatland/flatland_server/: CMakeLists.txt
flatland/flatland_server/src/: layer.cpp
flatland/scripts/: ci_prebuild.sh  clang_tidy_ignore.yaml
launch/: c_turtle.launch.py
param/: params.yaml
project/: README.md  data.txt  ploting.py  testing.py
project/src/turtle/: params.py  turtle.py
project/src/turtles/: c_turtleNew.py  c_turtlevOld.py  cturtle.modelDiferential.yaml  cturtle.modelTricycle.yaml
project/src/world/: turtle.model.yaml
project/tests/: FREQ_RESULTS
src/: package.xml  setup.cfg
src/launch/: turtle.launch.py
src/rviz/: robot_navigation.rviz
src/turtle/: params.py  turtle.py
src/world/: question.yaml  turtle.model.yaml  world.yaml
turtle/: turtle.py
(+1 files in other folders)
