<?xml version="1.0"?>
<package format="3">
  <name>c_turtle</name>
  <version>0.0.0</version>
  <description>The c_turtle package</description>

  <maintainer email="ros@todo.todo">ros</maintainer>

  <license>TODO</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>flatland_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
